updated some images and descriptions

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <h2>PROJECTS</h2>
         <div>
 
-          <h3> Todo Today - Daily task tracking app designed to help you build habits</h3>
+          <h3> Todo Today - Habit Tracker, a daily task tracking app designed to help you build habits</h3>
           <p>Create a task that you would like to do every day and check it off each day in the app.</p>
                       
           <p>Features!</p>
@@ -51,12 +51,17 @@
             <li>View history by week or month</li>
             <li>See how many days in a row you've done a task and earn a badge for doing a task every day for an entire week or month</li>
             <div class="todo-images">
+              <img src="images/todo-screenshot0.png" alt="Image of app">
               <img src="images/todo-screenshot1.png" alt="Image of app">
               <img src="images/todo-screenshot2.png" alt="Image of app">
               <img src="images/todo-screenshot3.png" alt="Image of app">
             </div>
             <li>Need to make a note about a particular task for today? Open up the journal and write it there</li>
-            <li>Hide a task if you don't need to worry about it for now</li>
+            <li>Hide a task if you don't need to worry about it for a while</li>
+            <li>Skip a task if you don't need to do it today, and your streak won't be stopped</li>
+            <li>Create subtasks to keep track of the different parts of a task</li>
+            <li>Reorder, rename, and delete tasks to stay organized</li>
+            <li>Tutorial when users open the app for the first time</li>
             <li>Customizable home screen</li>
             <li>Show tasks in a grid or list format</li>
             <li>Dark mode / Light mode</li>
@@ -76,14 +81,7 @@
             <li>For iOS only</li>
             <li>Built in Swift and SwiftUI</li>
             <li>All data stored locally</li>
-
-          </ul>
-
-      
-          <p>Other:</p>
-          <ul>
-            <li>Look for it in the iOS App Store soon</li>
-            <li>*Name subject to change</li>
+            <li>Look for it in the iOS App Store soon!</li>
           </ul>
 
         </div>
@@ -108,14 +106,14 @@
 
           <p>Technical Details:</p>
           <ul>
-            <li>Built using React and JavaScript, as well as some HTML/CSS</li>
+            <li>Built using React and JavaScript, as well as HTML/CSS</li>
             <li>Used a chi-square JavaScript library for the p-value calculations</li>
             <li>Works entirely on the local browser - no connection to a server necessary</li>
           </ul>
         </div>
 
         <div>
-          <h3> "Pass the Pigs" Online multiplayer game - Based on the dice-based game of the same name</h3>
+          <h3> "Pass 'Em" Online multiplayer game - Online Alternative to Pass the Pigs (a dice game)</h3>
           <div id="pigs-images">
             <img src="images/pigs-screenshot.png" alt="Image of app">
           </div>
@@ -123,15 +121,21 @@
           <p>About:</p>
           <ul>
             <li>Play the game "Pass the Pigs" with your friends online</li>
-            <li>Preview the lobby to see who is already in the game</li>
-            <li>Various quick chat options to send a message to your friends</li>
-            <li>First to 100 points wins</li>
+            <li>Create/join a room by name and password or join a random room</li>
+            <li>Chat functionality built in to communicate with the other players</li>
+            <li>Adjust game settings (number of players, target score) to play the game how you like it</li>
+            <li>See the rules of the game in the rules tab</li>
+            <li>Messages from the server when someone joins or leaves</li>
+            <li>Fun pig rolling animation when you roll</li>
+            <li>See the scores of all players in the game</li>
+            <li>Restart game button to start the fun again when someone wins</li>
+
           </ul>
 
           <p>Technical Details:</p>
           <ul>
-            <li>Built using HTML/CSS/JavaScript with p5.js on the front-end and Node.js, Express, and socket.io on the back-end</li>
-            <li>Only one lobby to join - small scale project</li>
+            <li>Built using TypeScript using React and CSS on the front-end and Node.js, Express, and socket.io on the back-end</li>
+            <li>Hosting/Deployment coming soon!</li>
           </ul>
         </div>
 
